--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -50,6 +52,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "happy-dom": "^14.12.3",
     "init": "^0.1.2",
     "npx": "^10.2.2",
     "postcss": "^8.4.38",
