feat/Unit Test: Order Status

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     //vitest
     "types": ["vitest/globals"]
   },
-  "include": ["src"],
+  "include": ["src", "test"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
